affinity.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-1
spec:
  containers:
    - image: prajwal1327/mytomcat:1.1.6
      name: tomcat
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In
            values:
            - large
            - medium
