docpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    image: prajwal1327/mytomcat:1.1.6
  imagePullSecrets:
  - name: regcred
