pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-3
spec:
  containers:
    - image: prajwal1327/mytomcat:1.1.6
      name: tomcat
  tolerations:      
    - effect: "NoSchedule"
      key: "mysize"
      operator: "Equal"
      value: "large"
