prom_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: stable-kube-prometheus-sta-prometheus
              port:
                number: 9090
